# Cobranza-Senati

./: .gitignore  APLICACION_FINAL.md  APLICACION_LISTA.md  CORRECCION_BUG_NRC.md  CORRECCION_FINAL_NRC.md  CORRECCION_SSE.md  Compilar-App.bat  INICIAR_DEV.bat  INSTALAR.bat  Iniciar-App.bat  Iniciar-Web.bat  MEJORAS_ADICIONALES.md  MEJORAS_IMPLEMENTADAS.md  MEJORAS_PRODUCCION.md  README-DESKTOP.md  SIMPLIFICACION_LOGICA_NRC.md  package-lock.json  package.json  servidor-standalone.js  test-sse.html
Senati-comandos/: .env  package-lock.json  package.json  tailwind.config.js  vite.config.js
Senati-comandos/public/: print.css
Senati-comandos/src/data/: cobro.js
Senati-comandos/src/pages/: Cobros.jsx  HomePage.jsx
Senati-comandos/src/routes/: AppRouter.jsx
Senati-comandos/src/services/: GetAdministrativo.js  Main.js  ObtenerData.js  apiConfig.js
automatizacion/: index.js  package-lock.json  package.json  test-parallel.js  test.http  test_cheerio.js
automatizacion/src/: GeneratoRandomDigits.js  NavigateOtherPage.js  RecorrerAlumnos.js  credentials.json  leerIdsDeColumnaD.js  login.js  main.js  render.yaml
automatizacion/src/Academico/: index.js  main.js  session_state.json
automatizacion/src/Administrativo/: index.js  main.js
automatizacion/src/CobrosCIS/: NavigateOtherPage.js  RecorrerAlumnos.js  leerIdsDeColumnaD.js  login.js  main.js  test_leer.js
automatizacion/src/Reportes/: index.js
electron-app/: main.js  package.json
tauri-app/: README.md  package.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
(+18 files in other folders)
