[package]
name = "cobranza-senati-tauri"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = ["window-close"] }

[features]
default = ["custom-protocol"]
custom-protocol = []
